[project]
name=actuator-viz
authors= [
    {name = "Nathaniel Asiak", email="asiaknathan@gmail.com"}
]
maintainers= [
    {name = "Nathaniel Asiak", email="asiaknathan@gmail.com"}
]
readme = "README.md"
license = "MIT"
version=1.0.0
dependencies = [
    "numpy>=1.21",
    "plotly>=5.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "typer>=0.9",      # CLI
    "rich>=13.0",   
]
requires-python = ">=3.8"

[project.optional-dependencies]
web = ["streamlit>=1.28"]
dev = ["pytest", "pytest-cov", "black", "ruff"]